--- a/node/login-lecture/app/package.json
+++ b/node/login-lecture/app/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
   },
   "name": "login-lecture",
   "version": "1.0.0",
