--- a/node/login-lecture/app/package.json
+++ b/node/login-lecture/app/package.json
@@ -7,7 +7,8 @@
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "winston": "^3.17.0"
   },
   "name": "login-lecture",
   "version": "1.0.0",
